<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Boost.Boost_F"
    android:clickable="true"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.9"
            android:id="@+id/transparent_layout"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        app:cardCornerRadius="25dp"
        android:clickable="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/d_boost_gradient">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="17dp"
            android:layout_margin="15dp"
            android:textColor="@color/white"
            android:text="@string/introducting_binder_boost"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_boost"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_the_line"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/be_the_top_profile_in_your_area_for_30_minutes_and_get_more_watchs"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@color/white">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/boost_me"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/ic_pink_background"
                    android:id="@+id/boost_btn"/>

            </LinearLayout>


        </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>